# refrasin

./: .gitignore  Directory.Packages.props  Dockerfile  RefraSin.sln  compose.yaml  pyproject.toml
RefraSin/: RefraSin.csproj
RefraSin.Compaction/: IRigidBody.cs  RefraSin.Compaction.csproj
RefraSin.Coordinates/: Angle.cs  CoordinateSystem.cs  Exceptions.cs  ICoordinateTransformations.cs  ICoordinates.cs  ILine.cs  IPoint.cs  IPointArithmetics.cs  IPointOperations.cs  IVector.cs  IVectorArithmetics.cs  IVectorOperations.cs  PointArithmeticsExtensions.cs
RefraSin.Coordinates.Test/: CoordinatesTest.cs  LineTest.cs
RefraSin.Hdf5Storage.Test/: Tests.cs
RefraSin.MaterialData/: BulkProperties.cs  IBulkProperties.cs  IInterfaceProperties.cs  IMaterial.cs  IMaterialInterface.cs  ISubstanceProperties.cs  InterfaceProperties.cs  Material.cs  MaterialInterface.cs  SubstanceProperties.cs
RefraSin.Numerics.Tests/: BfgsTests.cs  LinearSolverTest.cs
RefraSin.ParticleModel/: GrainBoundaryNode.cs  IGrainBoundaryNode.cs  INeckNode.cs  INodeMaterialProperties.cs  NeckNode.cs  SurfaceNode.cs
RefraSin.ParticleModel.Test/: GeometryTest.cs  GrainBoundaryRemeshingTest.cs  NeckRemeshingTest.cs  ParticleExtensionsTests.cs  ParticleSurfaceTest.cs  PlotUtils.cs  ReadOnlyParticleSurfaceTest.cs
RefraSin.ProcessModel/: ISystemState.cs  SystemState.cs
RefraSin.TEPSolver/: ISolverRoutines.cs  ISolverSession.cs  SinteringSolver.cs  SolutionState.cs  SolverRoutines.cs  SolverSession.cs
RefraSin.TEPSolver.Test/: OneParticleTest.cs  TwoParticleTest.cs
docker/: docker-entrypoint.xsh  (+1 more)
(+275 files in other folders)
